# Universal-Shaktris-Stadium

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  bottris_stadium.cpp  cli_main.cpp  dataset_visualizer.cpp  main.cpp  stadium_cli.cpp  stadium_gui.cpp  tbp_visualizer.cpp
src/Dataset/: GameState.hpp
src/SDL2/: BotrisVisualizer.cpp  BotrisVisualizer.hpp  DataVisualizerGUI.hpp  Stadium.hpp  StadiumGUI.hpp  VisualizerGUI.hpp  Window.cpp  Window.hpp  inputs.cpp  inputs.hpp
src/Shaktris/: Board.hpp  Game.cpp  Game.hpp  VersusGame.hpp  tetrio.hpp
src/TBP/: Bot.cpp  Bot.hpp  Botris.cpp  Botris.hpp  botris_interface.hpp
src/Tetris/: Board.hpp  Constants.hpp  Game.cpp  Game.hpp  Move.hpp  Piece.hpp  VersusGame.hpp  rng.hpp
src/Util/: json.hpp  pext.hpp
src/sqlite3/: CMakeLists.txt  sqlite3.h
